--- a/global-style.css
+++ b/global-style.css
@@ -15,9 +15,24 @@
 
 body {
   background: var(--light);
-  font-family: Comfortaa, sans-serif;
+  font-family: Catamaran, sans-serif;
   font-size: 1.5em;
 }
+
+h1 {
+  font-weight: 400;
+  font-size: 1.2em;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.vr {
+  color: var(--gray);
+  
+  display: inline;
+  
+}
+
 
 
 /* * * FLEX * * */
@@ -25,6 +40,10 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.flex-item {
+  flex-grow: 1;
 }
 
 .flex-left {
@@ -45,6 +64,7 @@ header {
   width: 100%;
   /*height: 15vh;*/
   margin: 10px 0px 0px 0px;
+  font-family: Comfortaa, sans-serif;
 }
 
 
@@ -101,16 +121,34 @@ header a {
 
 
 .ghost-button {
-  
+  background-color: var(--light);
+  border-color: var(--dark);
+  color: var(--dark);
 }
 
 
 /* * * SECTIONS * * */
 
+section {
+  margin-top: 50px;
+}
 
 
+/* * * FOOTER * * */
 
+footer {
+  background: var(--dark);
+  color: var(--light);
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+footer .bottom hr {
+  margin: 10px 10px;
+  border-color: var(--gray);
+}
 
 
 
