--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -1,23 +1,68 @@
-/* * * SECTION * * */
+
+/* * * Hero * * */
 
 #hero {
   
 }
 
 #hero h1 {
-  margin-left: 0;
-  margin-right: 0;
+  border-left: 4px solid var(--orange);
+  padding-left: 3%;
+  margin-left: 5%;
 }
 
+/* * * How It Works * * */
+#how-it-works {
+  background: var(--dark);
+  color: var(--light);
+  height: 50em;
+}
+
+#how-it-works .flex-container {
+  
+  flex-direction: column;
+  height: 90%;
+  
+}
+
+#how-it-works .flex-item {
+  flex-grow: 1;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#how-it-works .flex-item * {
+  margin: 0 5%;
+}
+
+#how-it-works .flex-item img {
+  width: 50%;
+  max-width: 544px;
+}
+
+#how-it-works hr {
+  border: 2px solid var(--gray);
+}
+
+#how-it-works h2 {
+  text-align: center;
+}
+
+/* * * Terminal * * */
 
 #terminal {
   background: var(--orange);
-  height: 50vh;
+  height: 80vh;
   padding-top: 30px;
+  margin-bottom: 60px;
 }
 
 #terminal h1 {
   color: var(--light);
+  height: 10%;
+  box-sizing: border-box;
 }
 
 #terminal .code {
@@ -25,13 +70,13 @@
   background: var(--dark);
   color: var(--light);
   
-  height: 100%;
+  height: 90%;
   width: 95%;
   box-sizing: border-box;
   margin: 0 auto;
-  margin-top: 20px;
-  bottom: -10px;
-  padding: 10px;
+  position: relative;
+  bottom: -30px;
+  padding: 20px;
 }
 
 #terminal .command {
@@ -42,9 +87,24 @@
   color: var(--light);
 }
 
+#terminal .special {
+  color: var(--orange);
+}
+
+#terminal .special-cmd {
+  color: var(--red);
+}
 
 
-
+@media only screen and (max-width: 816px) {
+  
+  #hero h1 {
+    border-left: none;
+    margin: 0 30px;
+    padding: 0;
+  }
+  
+}
 
 
 
