--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -183,6 +183,186 @@ footer ul {
   
 }
 
+
+
+
+
+/* * * Hero * * */
+
+#hero {
+  
+}
+
+#hero h1 {
+  border-left: 4px solid var(--orange);
+  padding-left: 3%;
+  margin-left: 5%;
+}
+
+/* * * How It Works * * */
+#how-it-works {
+  background: var(--dark);
+  color: var(--light);
+  height: 50em;
+}
+
+#how-it-works h1 {
+  padding-top: 20px;
+  font-size: 1.7em;
+}
+
+#how-it-works .flex-container {
+  
+  flex-direction: column;
+  height: 90%;
+  
+}
+
+#how-it-works .flex-item {
+  flex-grow: 1;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#how-it-works .flex-item * {
+  margin: 0 5%;
+}
+
+#how-it-works .flex-item img {
+  width: 50%;
+  max-width: 544px;
+}
+
+#how-it-works hr {
+  border: 2px solid var(--gray);
+}
+
+#how-it-works h2 {
+  text-align: center;
+}
+
+
+/* * * Terminal * * */
+
+#terminal {
+  background: var(--orange);
+  height: 20em;
+  padding-top: 30px;
+  margin-bottom: 60px;
+}
+
+#terminal h1 {
+  color: var(--light);
+  height: 10%;
+  box-sizing: border-box;
+}
+
+#terminal .code {
+  font-family: Inconsolata;
+  background: var(--dark);
+  color: var(--light);
+  
+  height: 90%;
+  width: 95%;
+  box-sizing: border-box;
+  margin: 0 auto;
+  position: relative;
+  bottom: -30px;
+  padding: 20px;
+}
+
+#terminal .command {
+  color: var(--gray);
+}
+
+#terminal .response {
+  color: var(--light);
+}
+
+#terminal .special {
+  color: var(--orange);
+}
+
+#terminal .special-cmd {
+  color: var(--red);
+}
+
+#download {
+  width: 100%;
+  height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#download a {
+  height: 30px;
+}
+
+
+
+#heading {
+  background: var(--orange);
+  color: var(--light);
+  padding: 30px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+
+
+
+
+form {
+  margin: 20px;
+}
+
+form table {
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  padding: 30px;
+  background: var(--dark);
+  color: var(--light);
+}
+
+table label {
+  font-size: 0.9em;
+}
+
+form table .buttons {
+  
+}
+
+
+
+
+#page {
+  margin-top: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+#installs {
+  flex-grow: 1;
+  box-sizing: border-box;
+  background: var(--dark);
+  color: var(--light);
+  height: 50vh;
+  padding: 20px 0;
+  padding-left: 20px;
+}
+
+#page aside {
+  flex-grow: 1;
+}
+
+
+
+
+
 /* SMALL */
 @media only screen and (max-width: 639px) {
   h1 {
@@ -208,6 +388,32 @@ footer ul {
   
   .flex-container {
     flex-direction: column;
+  }
+  
+  #how-it-works h1 {
+    text-align: center;
+    margin: 0 auto;
+  }
+  #how-it-works .flex-item {
+    display: flex;
+    flex-direction: column;
+  }
+  #how-it-works .flex-item img {
+    width: 80%;
+  }
+  
+  #terminal {
+    height: 35em;
+  }
+  
+  #hero h1 {
+    border-left: none;
+    margin: 0 30px;
+    padding: 0;
+  }
+  
+  aside {
+    display: none;
   }
   
 }
@@ -238,11 +444,24 @@ footer ul {
   .flex-container {
     flex-direction: column;
   }
+  
+  #hero h1 {
+    border-left: none;
+    margin: 0 30px;
+    padding: 0;
+  }
+  
+  #terminal {
+    height: 30em;
+  }
+  
 }
 
 /* LARGE */
 @media only screen and (min-width: 1024px) {
-  
+  #terminal {
+    height: 25em;
+  }
 }
 
 
